--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,6 +1,16 @@
-steps:
-- uses: actions/first-interaction@v1
-  with:
-    repo-token: ${{ secrets.GITHUB_TOKEN }}
-    issue-message: '# Message with markdown.\nThis is the message that will be displayed on users' first issue.'
-    pr-message: 'Message that will be displayed on users' first pr. Look, a `code block` for markdown.'
+name: Greeting from Mona
+on: push
+
+jobs:
+  my-job:
+    name: My Job
+    runs-on: ubuntu-latest
+    steps:
+    - name: Print a greeting
+      env:
+        MY_VAR: Hi there! My name is
+        FIRST_NAME: Mona
+        MIDDLE_NAME: The
+        LAST_NAME: Octocat
+      run: |
+        echo $MY_VAR $FIRST_NAME $MIDDLE_NAME $LAST_NAME.
