--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -9,8 +9,8 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
-
-      name: Install and build
+    
+    - name: Install and build
       run: |
         npm install
         npm run-script build
